# structs/responses/transactionsResponseDTO.go
@@ -1,0 +1,11 @@
+package responses
+
+import (
+	"transaction_service/models"
+)
+
+type TransactionResponseDTO struct {
+	StatusCode  int
+	Transaction *models.Transactions
+	StatusDesc  string
+}
