# swagger/swagger.json
@@ -99,6 +99,34 @@
                 }
             }
         },
+        "/orders/confirm-order": {
+            "post": {
+                "tags": [
+                    "orders"
+                ],
+                "description": "create Orders\n\u003cbr\u003e",
+                "operationId": "OrdersController.ConfirmOrder",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Orders content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ConfirmOrderDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.Orders"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
         "/orders/{id}": {
             "get": {
                 "tags": [
@@ -187,177 +215,190 @@
                     }
                 }
             }
+        },
+        "/transactions/": {
+            "get": {
+                "tags": [
+                    "transactions"
+                ],
+                "description": "get Transactions\n\u003cbr\u003e",
+                "operationId": "TransactionsController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Transactions"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/transactions/{id}": {
+            "get": {
+                "tags": [
+                    "transactions"
+                ],
+                "description": "get Transactions by id\n\u003cbr\u003e",
+                "operationId": "TransactionsController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Transactions"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "transactions"
+                ],
+                "description": "update the Transactions\n\u003cbr\u003e",
+                "operationId": "TransactionsController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Transactions content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.UpdateTransactionRequestDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Transactions"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "transactions"
+                ],
+                "description": "delete the Transactions\n\u003cbr\u003e",
+                "operationId": "TransactionsController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "29665.\u003cnil\u003e.Cart": {
+        "models.Cart": {
             "title": "Cart",
-            "type": "object"
-        },
-        "models.Categories": {
-            "title": "Categories",
             "type": "object",
             "properties": {
-                "CategoryId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "CategoryName": {
-                    "type": "string"
-                },
-                "CreatedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "DateCreated": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "DateModified": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "ImagePath": {
-                    "type": "string"
-                },
-                "ModifiedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                }
-            }
-        },
-        "models.Currencies": {
-            "title": "Currencies",
-            "type": "object",
-            "properties": {
-                "Active": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "CreatedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                },
                 "Currency": {
-                    "type": "string"
-                },
-                "CurrencyId": {
                     "type": "integer",
                     "format": "int64"
-                },
-                "DateCreated": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "DateModified": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "ModifiedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Symbol": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Item_prices": {
-            "title": "Item_prices",
-            "type": "object",
-            "properties": {
-                "Active": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "AltItemPrice": {
-                    "type": "number",
-                    "format": "float"
-                },
-                "CreatedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Currency": {
-                    "$ref": "#/definitions/models.Currencies"
-                },
-                "DateCreated": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "DateModified": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "ItemPrice": {
-                    "type": "number",
-                    "format": "float"
-                },
-                "ItemPriceId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "ModifiedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "ShowAltPrice": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "models.Items": {
-            "title": "Items",
-            "type": "object",
-            "properties": {
-                "Active": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "AvailableColors": {
-                    "type": "string"
-                },
-                "AvailableSizes": {
-                    "type": "string"
-                },
-                "Category": {
-                    "$ref": "#/definitions/models.Categories"
-                },
-                "CreatedBy": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "DateCreated": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "DateModified": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "Description": {
-                    "type": "string"
-                },
-                "ImagePath": {
-                    "type": "string"
                 },
                 "ItemId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "ItemName": {
-                    "type": "string"
-                },
-                "ItemPrice": {
-                    "$ref": "#/definitions/models.Item_prices"
-                },
-                "ModifiedBy": {
-                    "type": "integer",
-                    "format": "int64"
+                "Price": {
+                    "type": "number",
+                    "format": "double"
                 },
                 "Quantity": {
                     "type": "integer",
                     "format": "int64"
+                }
+            }
+        },
+        "models.ConfirmOrderDTO": {
+            "title": "ConfirmOrderDTO",
+            "type": "object",
+            "properties": {
+                "Confirmedby": {
+                    "type": "string"
+                },
+                "Status": {
+                    "type": "string"
+                },
+                "TransactionId": {
+                    "type": "string"
                 }
             }
         },
@@ -378,7 +419,8 @@
                     "format": "datetime"
                 },
                 "Item": {
-                    "$ref": "#/definitions/models.Items"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "ModifiedBy": {
                     "type": "integer",
@@ -414,7 +456,8 @@
                     "format": "int64"
                 },
                 "Currency": {
-                    "$ref": "#/definitions/models.Currencies"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "DateCreated": {
                     "type": "string",
@@ -459,15 +502,12 @@
                     "type": "string"
                 },
                 "Items": {
-                    "$ref": "#/definitions/29665.\u003cnil\u003e.Cart"
-                },
-                "RecipientAccountNumber": {
-                    "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Cart"
+                    }
                 },
                 "RequestType": {
-                    "type": "string"
-                },
-                "SenderAccountNumber": {
                     "type": "string"
                 },
                 "TotalQuantity": {
@@ -522,7 +562,7 @@
                 "StatusMessage": {
                     "type": "string"
                 },
-                "TansactionDetailId": {
+                "TransactionDetailId": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -562,16 +602,29 @@
                 "Order": {
                     "$ref": "#/definitions/models.Orders"
                 },
-                "Status": {
+                "StatusId": {
                     "type": "integer",
                     "format": "int64"
                 },
                 "TransactingCurrency": {
-                    "$ref": "#/definitions/models.Currencies"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "TransactionId": {
                     "type": "integer",
                     "format": "int64"
+                }
+            }
+        },
+        "requests.UpdateTransactionRequestDTO": {
+            "title": "UpdateTransactionRequestDTO",
+            "type": "object",
+            "properties": {
+                "RecipientAccountNumber": {
+                    "type": "string"
+                },
+                "SenderAccountNumber": {
+                    "type": "string"
                 }
             }
         }
@@ -580,6 +633,10 @@
         {
             "name": "orders",
             "description": "OrdersController operations for Orders\n"
+        },
+        {
+            "name": "transactions",
+            "description": "TransactionsController operations for Transactions\n"
         }
     ]
 }
